--- a/package.json
+++ b/package.json
@@ -21,18 +21,20 @@
   },
   "homepage": "https://github.com/radiantly/live-countdown-bot#readme",
   "dependencies": {
-    "better-sqlite3": "^7.1.2",
+    "better-sqlite3": "^7.4.6",
     "chrono-node": "^1.4.8",
+    "discord": "^0.8.2",
     "discord.js": "^12.5.3",
-    "got": "^11.8.1"
+    "got": "^11.8.3",
+    "node": "^17.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/preset-env": "^7.14.2",
-    "babel-jest": "^27.0.1",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.7",
+    "babel-jest": "^27.4.6",
     "husky": "^4.3.6",
-    "jest": "^27.0.1",
-    "lint-staged": "^11.0.0",
+    "jest": "^27.4.7",
+    "lint-staged": "^11.2.6",
     "prettier": "2.1.2"
   },
   "husky": {
