--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "chrono-node": "^1.4.8",
     "discord": "^0.8.2",
     "discord.js": "^12.5.3",
+    "express": "^4.17.2",
     "got": "^11.8.3",
     "node": "^17.3.0"
   },
